Binary Option Market initial admin UI.

--- a/src/configs/theme/config-styles.scss
+++ b/src/configs/theme/config-styles.scss
@@ -1,8 +1,8 @@
 /******* Theme *******/
-$primary      : #f50057;
-$secondary    : #2f9cf3;
-$error        : #b00020;
-$theme1       : #0090f7;
+$primary      : #68002c;
+$secondary    : #003a68;
+$error        : #a0001e;
+$theme1       : #00253e;
 $margin       : 20px;
 $radius       : 5px;
 
@@ -13,8 +13,8 @@ $grey35       : #414141;
 $black        : black;
 $black35      : #101010;
 $black65      : #212121;
-$white        : white;
-$white35      : #d4d2d2;
+$white        : #f3eeee;
+$white35      : #9c9999;
 $blue         : #3f51b5;
 $lightBlue    : #0096ef;
 $lightGrey    : #414141;
